--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Rest Instaya</title>
+    <title>Acceso denegado</title>
 </head>
 <body>
 
-    <h1>API Rest Instaya</h1>
+    <h1>Instayapi</h1><h1>Acceso denegado</h1>
+    <p>RestAPI para gestion de datos para Frontend Instaya.</p>
+
+    <p>Solicte acceso al administrador de la aplicacion</p>
     
 </body>
 </html>
